<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="Tip_Amount">Tip Amount: %s</string>
    <string name="CostOfServiceAmount">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (15%)</string>
    <string name="ok_service">Okay (10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
</resources>